WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286816
[LibWebRTC] Fix Linux, GStreamer and unified build
https://bugs.webkit.org/show_bug.cgi?id=286816
Summary
[LibWebRTC] Fix Linux, GStreamer and unified build
Olivier Blin
Reported
2025-01-31 10:18:36 PST
- libwebrtc: Remove test support files requiring gtest headers, this is not exposed in the CMake build (introduced in libwebrtc M132 update,
287962@main
) - LibWebRTCMediaEndpoint.cpp: Do not move rtcReport to avoid const qualified error (introduced in
287147@main
) - GStreamerVideoEncoderFactory.cpp: Use ASCIILiteral to avoid error from missing span(const gchar*) (from
279038@main
) - WebRTCMonitor.cpp: Include missing LibWebRTCNetwork.h for ref/deref methods LibWebRTCMediaEndpoint.cpp errors: /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/StdLibExtras.h: In instantiation of ‘constexpr typename std::remove_reference<_Arg>::type&& std::move(T&&) [with WTF::CheckMoveParameterTag <anonymous> = WTF::CheckMoveParameter; T = const webrtc::scoped_refptr<const webrtc::RTCStatsReport>&; typename remove_reference<_Arg>::type = const webrtc::scoped_refptr<const webrtc::RTCStatsReport>]’: /app/webkit/Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:282:140: required from here /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/StdLibExtras.h:817:51: error: static assertion failed: T is const qualified. 817 | static_assert(!is_const<NonRefQualifiedType>::value, "T is const qualified."); | ^~~~~ /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/StdLibExtras.h:817:51: note: ‘!(bool)std::integral_constant<bool, true>::value’ evaluates to false
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2025-01-31 10:23:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39825
EWS
Comment 2
2025-02-04 00:59:43 PST
Committed
289776@main
(80245993fa5a): <
https://commits.webkit.org/289776@main
> Reviewed commits have been landed. Closing PR #39825 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-04 01:00:14 PST
<
rdar://problem/144145258
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug