Cherry-pick 289776@main (80245993fa5a). https://bugs.webkit.org/show_bug.cgi?id=286816

[LibWebRTC] Fix Linux, GStreamer and unified build
    https://bugs.webkit.org/show_bug.cgi?id=286816

    Reviewed by Philippe Normand.

    * Source/ThirdParty/libwebrtc/CMakeLists.txt:
      - Remove test support files requiring gtest headers, not exposed in CMake build
        (introduced in libwebrtc M132 update, 287962@main)

    * Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
    (WebCore::LibWebRTCMediaEndpoint::createStatsCollector):
      - Do not move rtcReport to avoid const qualified error (introduced in 287147@main)

    * Source/WebCore/platform/mediastream/libwebrtc/gstreamer/GStreamerVideoEncoderFactory.cpp:
    (WebCore::GStreamerVideoEncoder::makeElement):
      - Use ASCIILiteral to avoid error from missing span(const gchar*) (from 279038@main)

    * Source/WebKit/WebProcess/Network/webrtc/WebRTCMonitor.cpp:
      - Include missing LibWebRTCNetwork.h for ref/deref methods

    Canonical link: https://commits.webkit.org/289776@main